--- a/src/components/Navbar/NavigationMenu/NavigationMenu.css
+++ b/src/components/Navbar/NavigationMenu/NavigationMenu.css
@@ -17,3 +17,12 @@
     border-color: #000000;
     outline-color: #000000;
 }
+
+.NavigationHeader {
+    background-color: #4a154b;
+}
+
+.NavigationMenu {
+    background-color: #1d1a1af3;
+    color: #ffffff;
+}
