--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  height: 100%;
-  padding: 2em 0;
-  text-align: center;
-  background-color: #f4f4f4;
-  box-sizing: border-box;
+	height: 100%;
+	padding: 2em 0;
+	text-align: center;
+	background-color: #f4f4f4;
+	box-sizing: border-box;
 }
 
 .main {
@@ -11,7 +11,9 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: calc(100vh - 2em - 4px); /*parent padding 2em and 2px + 2px borders top and bottom*/
+	min-height: calc(
+		100vh - 2em - 4px
+	); /*parent padding 2em and 2px + 2px borders top and bottom*/
 	max-width: 1400px;
 	margin: 0 auto;
 	border: 2px solid #eee;
@@ -20,36 +22,36 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
