feat: finish last details

--- a/src/components/Exercises/Recomendation/Recomendation.css
+++ b/src/components/Exercises/Recomendation/Recomendation.css
@@ -11,6 +11,6 @@
 	display: flex;
 	width: 100%;
 	justify-content: center;
-	background-color: rgb(235, 235, 235);
-	color: rgb(77, 77, 77);
+	background-color: #4a154b;
+	color: #ffffff;
 }
